--- a/scss/morkborg/_fonts.scss
+++ b/scss/morkborg/_fonts.scss
@@ -1,21 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya&family=Lato&family=Oswald&family=Special+Elite&display=swap");
 
 @font-face {
-  font-family: "Blood Crow";
-  src: url("../assets/fonts/bloodcrow.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Inconsolatazi4varl_qu";
-  src: url("../assets/fonts/Inconsolatazi4varl_qu-Bold.otf") format("opentype");
-  font-weight: bold;
-}
-
-@font-face {
-  font-family: "Inconsolatazi4varl_qu";
-  src: url("../assets/fonts/Inconsolatazi4varl_qu-Regular.otf")
-    format("opentype");
+  font-family: "Alegreya";
+  src: url("../assets/fonts/Alegreya-Regular.ttf") format("truetype");
   font-weight: normal;
+}
+
+@font-face {
+  font-family: "Alegreya";
+  src: url("../assets/fonts/Alegreya-Bold.ttf") format("truetype");
+  font-weight: bold;
 }
 
 @font-face {
@@ -25,8 +19,25 @@
 }
 
 @font-face {
+  font-family: "Blood Crow";
+  src: url("../assets/fonts/bloodcrow.ttf") format("truetype");
+}
+
+@font-face {
   font-family: "FetteTrumpDeutsch";
   src: url("../assets/fonts/FetteTrumpDeutsch.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Inconsolata";
+  src: url("../assets/fonts/Inconsolata-Bold.ttf") format("truetype");
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: "Inconsolata";
+  src: url("../assets/fonts/Inconsolata-Regular.ttf") format("truetype");
+  font-weight: normal;
 }
 
 @font-face {
