--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -216,7 +216,7 @@
   border: 1px solid #7a7971;
   border-radius: 0;
   color: var(--foreground-color);
-  font-family: var(--journal-font);
+  font-family: var(--item-font);
   font-size: 14px;
   resize: none;
 }
@@ -299,8 +299,8 @@
 .morkborg.sheet.actor .sheet-body .form-group select,
 .morkborg.sheet.item .sheet-body .form-group input,
 .morkborg.sheet.item .sheet-body .form-group select {
-  font-family: var(--journal-font);
-  font-size: var(--journal-font-size);
+  font-family: var(--item-font);
+  font-size: 14px;
 }
 .morkborg.sheet.actor .sheet-body .form-group.special,
 .morkborg.sheet.item .sheet-body .form-group.special {
