--- a/scss/morkborg/_sheet.scss
+++ b/scss/morkborg/_sheet.scss
@@ -68,7 +68,7 @@
     border: 1px solid #7a7971;
     border-radius: 0;
     color: var(--foreground-color);
-    font-family: var(--journal-font);
+    font-family: var(--item-font);
     font-size: 14px;
     resize: none;
 
@@ -150,8 +150,8 @@
 
       input,
       select {
-        font-family: var(--journal-font);
-        font-size: var(--journal-font-size);
+        font-family: var(--item-font);
+        font-size: 14px;
       }
 
       &.special {
