Fix ability ordering on character sheet and update CHANGELOG.

--- a/templates/actor/character/sheet-header.hbs
+++ b/templates/actor/character/sheet-header.hbs
@@ -125,7 +125,7 @@
   </div>
   <div class="header-gutter-col"></div>
   <div class="header-col3">
-    {{#each data.system.abilities}}
+    {{#each data.system.orderedAbilities}}
     <div class="ability-row">
       <input
         class="ability-input"
