--- a/templates/dialog/scvm-dialog.hbs
+++ b/templates/dialog/scvm-dialog.hbs
@@ -5,7 +5,7 @@
       {{#each this.classes}}
       <li>
         <label
-          ><input name="{{this.pack}}" type="checkbox" class="class-checkbox"
+          ><input name="{{this.uuid}}" type="checkbox" class="class-checkbox"
           {{#if this.checked }}checked{{/if}} />
           <div class="class-name">{{this.name}}</div></label
         >
