--- a/scss/morkborg.scss
+++ b/scss/morkborg.scss
@@ -1,10 +1,12 @@
 @import "morkborg/_root";
+@import "morkborg/_global";
 @import "morkborg/_fonts";
 @import "morkborg/_flex";
 @import "morkborg/_morkborg";
 @import "morkborg/_sheet";
 @import "morkborg/_actor-sheet";
 @import "morkborg/_character-sheet";
+@import "morkborg/_journal-sheet";
 @import "morkborg/_npc-header";
 @import "morkborg/_item-list";
 @import "morkborg/_item-sheet";
