--- a/scss/morkborg/_root.scss
+++ b/scss/morkborg/_root.scss
@@ -14,7 +14,8 @@
   --h1-font: "Blood Crow";
   --h2-font: "FetteTrumpDeutsch";
   --h3-font: "Old Cupboard";
-  --item-font: "Special Elite";
+  --item-font: "Calling Code";
+  --button-font: "FetteTrumpDeutsch";
   --journal-font: "Alegreya";
   --journal-font-size: 18px;
   --window-border-color: #222222;
