--- a/templates/actor/common/violence-tab.hbs
+++ b/templates/actor/common/violence-tab.hbs
@@ -5,14 +5,14 @@
     <span class="roll-initiative">{{localize "MB.Roll"}} {{localize "MB.Initiative"}}:</span>
     <button
       type="button"
-      class="button item-button rollable initiative-button party-initiative-button"
+      class="button sheet-button rollable party-initiative-button"
       title="{{localize 'MB.Party'}}"
     >
       {{localize "MB.Party"}}
     </button>
     <button
       type="button"
-      class="button item-button rollable initiative-button individual-initiative-button"
+      class="button sheet-button rollable individual-initiative-button"
       title="{{localize 'MB.Individual'}}"
     >
       {{localize "MB.Individual"}}
@@ -189,7 +189,7 @@
       <div>
         <button
           type="button"
-          class="item-button rollable defend-button"
+          class="rollable sheet-button defend-button"
           title="{{localize 'MB.Defend'}}"
         >
           {{localize "MB.Defend"}}
