--- a/scss/morkborg/_fonts.scss
+++ b/scss/morkborg/_fonts.scss
@@ -13,6 +13,16 @@
 }
 
 @font-face {
+  font-family: "Deutsch Gothic";
+  src: url("../assets/fonts/Deutsch.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "OldNewspaperTypes";
+  src: url("../assets/fonts/OldNewspaperTypes.ttf") format("truetype");
+}
+
+@font-face {
   font-family: "Benjamin Franklin";
   src: url("../assets/fonts/BenjaminFranklin.ttf") format("truetype");
   font-weight: normal;
@@ -21,6 +31,12 @@
 @font-face {
   font-family: "Blood Crow";
   src: url("../assets/fonts/bloodcrow.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Calling Code";
+  src: url("../assets/fonts/CallingCode-Regular.ttf") format("truetype");
+  font-weight: normal;
 }
 
 @font-face {
@@ -38,6 +54,11 @@
   font-family: "Inconsolata";
   src: url("../assets/fonts/Inconsolata-Regular.ttf") format("truetype");
   font-weight: normal;
+}
+
+@font-face {
+  font-family: "JSL Ancient";
+  src: url("../assets/fonts/jancient.ttf") format("truetype");
 }
 
 @font-face {
