--- a/scss/morkborg/_morkborg.scss
+++ b/scss/morkborg/_morkborg.scss
@@ -48,7 +48,7 @@
   .button {
     background: var(--foreground-color);
     color: var(--background-color);
-    font-family: var(--h2-font);
+    font-family: var(--button-font);
   }
 }
 
