--- a/templates/dialog/scvm-dialog.hbs
+++ b/templates/dialog/scvm-dialog.hbs
@@ -1,7 +1,7 @@
 <form id="scvm-form" class="custom-dialog scvm-dialog">
   <div class="section">
     <div class="subtitle">{{localize "MB.ScvmfactoryChooseFromClasses"}}</div>
-    <ul>
+    <ul class="class-list">
       {{#each this.classes}}
       <li>
         <label
@@ -12,14 +12,14 @@
       </li>
       {{/each}}
     </ul>
-    <div>
+    <div class="toggle-row">
       <a class="toggle-none">{{localize "MB.ScvmfactoryToggleNone"}}</a>&nbsp; /
       &nbsp;<a class="toggle-all">{{localize "MB.ScvmfactoryToggleAll"}}</a>
     </div>
   </div>
 
   {{#if forActor}}
-  <div class="section">
+  <div class="section warning">
     <p>{{localize "MB.ScvmfactoryWarning"}}</p>
   </div>
   {{/if}}
