--- a/scss/morkborg/_root.scss
+++ b/scss/morkborg/_root.scss
@@ -11,11 +11,12 @@
   --window-background: #000000;
   --chat-font: "Alegreya";
   --chat-info-font: "Oswald";
-  --h1-font: "Blood Crow";
+  --h1-font: "Deutsch Gothic";
   --h2-font: "FetteTrumpDeutsch";
   --h3-font: "Old Cupboard";
   --item-font: "Calling Code";
-  --button-font: "FetteTrumpDeutsch";
+  --button-font: "Rakkas";
+  --button-transform: "uppercase";
   --journal-font: "Alegreya";
   --journal-font-size: 18px;
   --window-border-color: #222222;
