--- a/templates/actor/character/powers-tab.hbs
+++ b/templates/actor/character/powers-tab.hbs
@@ -56,7 +56,7 @@
         <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
         <h4 class="item-name item-edit rollable">{{item.name}}</h4>
         <div class="item-buttons">
-          <button type="button" class="rollable item-button wield-power-button">
+          <button type="button" class="rollable item-button wield-power-button" title="{{localize 'MB.WieldButtonTitle'}}">
             {{localize "MB.Wield"}}
           </button>
         </div>
