--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Alegreya&family=Lato&family=Oswald&family=Special+Elite&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya&family=Lato&family=Oswald&family=Rakkas&family=Special+Elite&display=swap");
 :root {
   --background-color: #000000;
   --foreground-color: #ffffff;
@@ -12,11 +12,12 @@
   --window-background: #000000;
   --chat-font: "Alegreya";
   --chat-info-font: "Oswald";
-  --h1-font: "Blood Crow";
+  --h1-font: "Deutsch Gothic";
   --h2-font: "FetteTrumpDeutsch";
   --h3-font: "Old Cupboard";
   --item-font: "Calling Code";
-  --button-font: "FetteTrumpDeutsch";
+  --button-font: "Rakkas";
+  --button-transform: "uppercase";
   --journal-font: "Alegreya";
   --journal-font-size: 18px;
   --window-border-color: #222222;
@@ -48,6 +49,14 @@
   font-family: "Alegreya";
   src: url("../assets/fonts/Alegreya-Bold.ttf") format("truetype");
   font-weight: bold;
+}
+@font-face {
+  font-family: "Burvetica NC";
+  src: url("../assets/fonts/Burvetica NC.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Burvetica Thick NC";
+  src: url("../assets/fonts/Burvetica Thick NC.ttf") format("truetype");
 }
 @font-face {
   font-family: "Deutsch Gothic";
@@ -352,18 +361,17 @@
 .morkborg.sheet.actor .sheet-button {
   background-color: var(--foreground-color);
   border: none;
-  border-bottom: 2px solid #777;
   border-radius: 0;
   color: var(--background-color);
   font-family: var(--button-font);
   font-size: 14px;
   height: 28px;
   width: 90px;
+  text-transform: uppercase;
 }
 .morkborg.sheet.actor .item-button {
   background-color: var(--foreground-color);
   border: none;
-  border-bottom: 2px solid #777;
   border-radius: 0;
   color: var(--background-color);
   flex: none;
@@ -372,6 +380,7 @@
   height: 28px;
   min-width: 70px;
   width: auto;
+  text-transform: uppercase;
 }
 .morkborg.sheet.actor .rule-text {
   font-family: var(--item-font);
@@ -569,16 +578,8 @@
   text-align: center;
 }
 .morkborg.sheet.actor .sheet-body .equipment-top-row {
-  margin-top: 10px;
-  margin-left: 20px;
   display: flex;
-  flex-direction: row;
-}
-.morkborg.sheet.actor .sheet-body .silver {
-  flex: 0 0 200px;
-}
-.morkborg.sheet.actor .sheet-body .silver-input {
-  width: 70px;
+  align-items: center;
 }
 
 .morkborg.sheet.actor.character {
@@ -606,7 +607,7 @@
 }
 .morkborg.sheet.actor.character .sheet-header .header-col2 .classname-row {
   display: flex;
-  align-items: baseline;
+  align-items: center;
 }
 .morkborg.sheet.actor.character .sheet-header .header-col2 .classname-row .classname {
   letter-spacing: 2px;
@@ -617,12 +618,6 @@
   margin-top: 5px;
 }
 .morkborg.sheet.actor.character .sheet-header .header-col2 .buttons-row button {
-  border: none;
-  border-bottom: 2px solid #777;
-  border-radius: 0;
-  font-family: var(--h2-font);
-  font-size: 14px;
-  height: 28px;
   flex: 1;
 }
 .morkborg.sheet.actor.character .sheet-header .header-col3 {
@@ -784,7 +779,7 @@
 }
 .morkborg.sheet.actor.character .sheet-body .carry-block {
   flex: 1;
-  text-align: center;
+  margin-left: 20px;
 }
 .morkborg.sheet.actor.character .sheet-body .container-label {
   margin-left: 40px;
@@ -1256,12 +1251,12 @@ form.editable .results .result-details input[type=text]:hover, form.editable .re
 .dialog .dialog-buttons button {
   background: var(--foreground-color);
   color: var(--background-color);
-  font-family: var(--h2-font);
+  font-family: var(--button-font);
 }
 .dialog .dialog-buttons button.default {
   background: var(--foreground-color);
   color: var(--background-color);
-  font-family: var(--h2-font);
+  font-family: var(--button-font);
 }
 
 form .form-group select {
@@ -1306,7 +1301,7 @@ select:focus {
 #settings button {
   color: var(--background-color);
   background: var(--foreground-color);
-  font-family: var(--h2-font);
+  font-family: var(--button-font);
 }
 
 #sidebar {
@@ -1335,16 +1330,16 @@ select:focus {
 
 .sidebar-tab .action-buttons button {
   background: var(--sidebar-button-background-color);
-  color: var(--sidebar-button-foreground-color);
   border-radius: 0;
-  font-family: var(--h2-font);
+  color: var(--sidebar-button-foreground-color);
+  font-family: var(--button-font);
 }
 .sidebar-tab .directory-header .header-search input {
   background: var(--sidebar-button-background-color);
-  color: var(--sidebar-button-foreground-color);
   border: 1px solid #252525;
   border-radius: 0;
   font-family: var(--h2-font);
+  color: var(--sidebar-button-foreground-color);
 }
 .sidebar-tab .directory-header .header-search input[type=text]:focus {
   box-shadow: 0 0 5px var(--highlight-background-color);
