--- a/templates/actor/common/violence-tab.hbs
+++ b/templates/actor/common/violence-tab.hbs
@@ -62,7 +62,7 @@
               class="item-button rollable attack-button"
               data-roll="d20+@abilities.strength.value"
               data-label="attack_{{item._id}}"
-              title="{{localize 'MB.Attack'}}"
+              title="{{localize 'MB.AttackButtonTitle'}}"
             >
               {{localize 'MB.Attack'}}
             </button>
@@ -190,7 +190,7 @@
         <button
           type="button"
           class="rollable sheet-button defend-button"
-          title="{{localize 'MB.Defend'}}"
+          title="{{localize 'MB.DefendButtonTitle'}}"
         >
           {{localize "MB.Defend"}}
         </button>
