--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -17,7 +17,6 @@
   --h3-font: "Old Cupboard";
   --item-font: "Calling Code";
   --button-font: "Rakkas";
-  --button-transform: "uppercase";
   --journal-font: "Alegreya";
   --journal-font-size: 18px;
   --window-border-color: #222222;
@@ -364,7 +363,7 @@
   border-radius: 0;
   color: var(--background-color);
   font-family: var(--button-font);
-  font-size: 14px;
+  font-size: 12px;
   height: 28px;
   width: 90px;
   text-transform: uppercase;
@@ -376,7 +375,7 @@
   color: var(--background-color);
   flex: none;
   font-family: var(--button-font);
-  font-size: 14px;
+  font-size: 12px;
   height: 28px;
   min-width: 70px;
   width: auto;
@@ -578,8 +577,9 @@
   text-align: center;
 }
 .morkborg.sheet.actor .sheet-body .equipment-top-row {
-  display: flex;
   align-items: center;
+  display: flex;
+  margin-left: 20px;
 }
 
 .morkborg.sheet.actor.character {
@@ -779,7 +779,6 @@
 }
 .morkborg.sheet.actor.character .sheet-body .carry-block {
   flex: 1;
-  margin-left: 20px;
 }
 .morkborg.sheet.actor.character .sheet-body .container-label {
   margin-left: 40px;
@@ -830,6 +829,9 @@
 .morkborg.sheet.actor .sheet-header.npc .hitpoints-row {
   flex: 0 0 35px;
   margin-bottom: 10px;
+  margin-left: 14px;
+}
+.morkborg.sheet.actor .sheet-header.npc .buttons-row {
   margin-left: 14px;
 }
 
@@ -936,11 +938,6 @@
   text-transform: uppercase;
   margin-left: 13px;
 }
-.morkborg.sheet.item .sheet-body {
-  margin-top: 8px;
-  padding: 5px;
-}
-
 .morkborg.sheet.actor.container .sheet-header {
   margin-top: 0;
   flex: 0 0 90px;
