--- a/scss/morkborg/_actor-sheet.scss
+++ b/scss/morkborg/_actor-sheet.scss
@@ -7,7 +7,7 @@
       border-radius: 0;
       color: var(--background-color);
       font-family: var(--button-font);
-      font-size: 14px;
+      font-size: 12px;
       height: 28px;
       width: 90px;
       text-transform: uppercase;
@@ -21,7 +21,7 @@
       color: var(--background-color);
       flex: none;
       font-family: var(--button-font);
-      font-size: 14px;
+      font-size: 12px;
       height: 28px;
       // width: 90px;
       min-width: 70px;
@@ -278,8 +278,9 @@
 
     .sheet-body {
       .equipment-top-row {
-        display: flex;
         align-items: center;
+        display: flex;
+        margin-left: 20px;
       }
     }
   }
