--- a/templates/actor/common/npc-header.hbs
+++ b/templates/actor/common/npc-header.hbs
@@ -37,10 +37,10 @@
         />
       </div>
       <div class="buttons-row">
-        <button type="button" class="roll-button reaction rollable">
+        <button type="button" class="sheet-button reaction rollable">
           {{localize "MB.Reaction"}}
         </button>
-        <button type="button" class="roll-button morale rollable">
+        <button type="button" class="sheet-button morale rollable">
           {{localize "MB.Morale"}}
         </button>
       </div>
