--- a/scss/morkborg/_fonts.scss
+++ b/scss/morkborg/_fonts.scss
@@ -50,6 +50,11 @@
 }
 
 @font-face {
+  font-family: "Cantebriggia";
+  src: url("../assets/fonts/cantebriggia.ttf") format("truetype");
+}
+
+@font-face {
   font-family: "FetteTrumpDeutsch";
   src: url("../assets/fonts/FetteTrumpDeutsch.ttf") format("truetype");
 }
