--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -80,6 +80,10 @@
   font-weight: normal;
 }
 @font-face {
+  font-family: "Cantebriggia";
+  src: url("../assets/fonts/cantebriggia.ttf") format("truetype");
+}
+@font-face {
   font-family: "FetteTrumpDeutsch";
   src: url("../assets/fonts/FetteTrumpDeutsch.ttf") format("truetype");
 }
@@ -227,6 +231,8 @@
 .morkborg.sheet.item input[type=date] {
   color: var(--foreground-color);
   border-radius: 0;
+  border: none;
+  border-bottom: 1px solid var(--highlight-background-color);
 }
 .morkborg.sheet.actor input[type=text]:focus, .morkborg.sheet.actor input[type=number]:focus, .morkborg.sheet.actor input[type=password]:focus, .morkborg.sheet.actor input[type=date]:focus, .morkborg.sheet.actor input[type=time]:focus, .morkborg.sheet.actor input[type=text]:hover, .morkborg.sheet.actor input[type=number]:hover, .morkborg.sheet.actor input[type=password]:hover, .morkborg.sheet.actor input[type=date]:hover, .morkborg.sheet.actor input[type=time]:hover,
 .morkborg.sheet.item input[type=text]:focus,
@@ -351,6 +357,7 @@
 .morkborg.sheet.item .sheet-body .form-group select {
   font-family: var(--item-font);
   font-size: 14px;
+  text-align: center;
 }
 .morkborg.sheet.actor .sheet-body .form-group.special,
 .morkborg.sheet.item .sheet-body .form-group.special {
@@ -749,7 +756,6 @@
   float: left;
 }
 .morkborg.sheet.actor.character .sheet-header .ability-input {
-  border: 1px solid #7a7971;
   font-family: var(--item-font);
   font-size: 14pt;
   text-align: center;
@@ -975,6 +981,227 @@
   margin-left: 14px;
 }
 
+.morkborg.sheet.actor.misery-tracker .window-content form {
+  align-items: center;
+  border: 1px solid var(--foreground-color);
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  font-family: "Calling Code", sans-serif;
+  font-size: 16px;
+  justify-content: flex-start;
+  padding: 20px;
+  width: 100%;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .title {
+  margin-bottom: 90px;
+  width: 100%;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .title input {
+  height: 50px;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .agony-block {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .agony-block .agony-title {
+  font-family: "FetteTrumpDeutsch", cursive;
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .button-block {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .button-block .misery-button {
+  font-size: 16px;
+  width: 200px;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .misery-title {
+  font-family: "FetteTrumpDeutsch", cursive;
+  font-size: 20px;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries {
+  background-image: url("/systems/morkborg/assets/ui/unicursal-hexagram.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  flex: 0 0 300px;
+  margin-bottom: 90px;
+  width: 300px;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries .misery-block {
+  align-items: center;
+  background-color: var(--background-color);
+  border: 13px solid var(--foreground-color);
+  border-radius: 45px;
+  display: flex;
+  height: 90px;
+  float: left;
+  justify-content: center;
+  position: absolute;
+  width: 90px;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries .misery-block.activated {
+  border: 13px solid var(--foreground-color);
+  background-color: var(--foreground-color);
+  color: var(--background-color);
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries .misery-block.activated input {
+  color: var(--background-color);
+  border-bottom: none;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries .misery-block input {
+  flex: 0 0 20px;
+  font-family: "Cantebriggia", cursive;
+  font-size: 24px;
+  text-align: center;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries .misery-block .colon {
+  font-size: 20px;
+  text-align: center;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries .misery-block:nth-child(1) {
+  top: 130px;
+  left: 205px;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries .misery-block:nth-child(2) {
+  top: 370px;
+  left: 340px;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries .misery-block:nth-child(3) {
+  top: 225px;
+  left: 75px;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries .misery-block:nth-child(4) {
+  top: 472px;
+  left: 205px;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries .misery-block:nth-child(5) {
+  top: 225px;
+  left: 335px;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries .misery-block:nth-child(6) {
+  top: 373px;
+  left: 73px;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries .seven-seven {
+  align-items: center;
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+  background-color: var(--foreground-color);
+  border-radius: 45px;
+  display: flex;
+  flex-direction: column;
+  height: 90px;
+  justify-content: center;
+  left: 205px;
+  position: absolute;
+  text-align: center;
+  top: 300px;
+  width: 90px;
+}
+.morkborg.sheet.actor.misery-tracker .window-content form .miseries .seven-seven .numbers {
+  color: var(--background-color);
+  font-family: "Cantebriggia", cursive;
+  font-size: 40px;
+}
+
+/* https://stackoverflow.com/questions/73537320/how-do-i-make-the-html-window-appear-to-shake */
+@keyframes shake {
+  0% {
+    transform: translate(0.5px, 0.5px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-0.5px, -1px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-1.5px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(1.5px, 1px) rotate(0deg);
+  }
+  40% {
+    transform: translate(0.5px, -0.5px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-0.5px, 1px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-1.5px, 0.5px) rotate(0deg);
+  }
+  70% {
+    transform: translate(1.5px, 0.5px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-0.5px, -0.5px) rotate(1deg);
+  }
+  90% {
+    transform: translate(0.5px, 1px) rotate(0deg);
+  }
+  100% {
+    transform: translate(0.5px, -1px) rotate(-1deg);
+  }
+}
+@keyframes bigshake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+@keyframes breathing {
+  0% {
+    -webkit-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+  25% {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+  }
+  60% {
+    -webkit-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+  100% {
+    -webkit-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
 .form-group input[type=text] {
   color: var(--foreground-color);
 }
